Updated site title

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 carpentry: "swc"
 
 # Overall title for pages.
-title: "King County"
+title: "Software Carpentry at King County"
 
 # Contact email address.
 email: cajohnson@kingcounty.gov
